Combine spaceSeparated and lowercase macros as they're always used together